--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEBSTUDIO</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <!-- #region header -->
-<header>
+<header class="header">
 
 
-    <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="./index.html">Portfolio</a></li>
-            <li><a href="./index.html">Contacts</a></li>
+    <nav class="nav">
+        <a class="logo" href="/index.html">Web<span class="logo-span">Studio</span></a>
+        <ul class="menu">
+            <li class="menu-item"><a class="menu-link" href="/index.html">Studio</a></li>
+            <li class="menu-item"><a class="menu-link" href="/index.html">Portfolio</a></li>
+            <li class="menu-item"><a class="menu-link" href="/index.html">Contacts</a></li>
         </ul>
     </nav>
-    <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="address">
+        <ul class="contacts">
+            <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
 
@@ -30,15 +41,16 @@
 <!-- #endregion header-->
 <main>
     <!-- #region hero image -->
-    <section>
-        <h1>Effective Solutions
-            for Your Business
+    <section class="hero">
+        <h1 class="hero-title">
+            Effective Solutions
+             for Your Business
         </h1>
-        <button type="button">Order Service</button>
+        <button class="hero-btn" type="button">Order Service</button>
     </section>
     <!-- #endregion hero image -->
 
-    <!-- #Section 2-->
+    <!-- #Section 3-->
     <section>
         <h2>Features</h2>
         <ul>
@@ -64,41 +76,84 @@
             </li>
         </ul>
     </section>
-    <!--#endSection 2-->
-    <!--Section 3-->
+    <!--#endSection 3-->
+    <!--#Section 4-->
     <section>
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images//section2/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
+                <img src="./images//section4/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/section2/tom_ford.jpg" alt="tom_ford" width="264" height="260">
+                <img src="./images/section4/tom_ford.jpg" alt="tom_ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images//section2/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
+                <img src="./images//section4/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images//section2/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
+                <img src="./images//section4/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
     </section>
-    <!--#endSection 3-->
+    <!--#endSection 4-->
+    <!--#Section 5-->
+    <section>
+        <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/section5/banking_app.jpg" alt="banking_app" width="360" height="300"> 
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/section5/cashless_payment.jpg" alt="cashless_payment" width="360" height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/section5/meditation_app.jpg" alt="meditation_app" width="360" height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/section5/taxi_service.jpg" alt="taxi_service" width="360" height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/section5/screen_illustrations.jpg" alt="screen_illustrations" width="360" height="300"> 
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/section5/online_courses.jpg" alt="online_courses" width="360" height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+
+
+
+    </section>
+
+
+    <!--#endSection 5-->
+
 </main>
 <!-- #region footer-->
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<footer class="footer">
+    <a class="logo" href="/index.html">Web<span class="logo-span-footer">Studio</span></a>
+    <p class="footer-ps">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
-<!-- endregion footer-->
+<!-- #endregion footer-->
 </body>
 
 </html>
