--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 
     <nav class="nav">
-        <a class="logo" href="/index.html">Web<span class="logo-span">Studio</span></a>
+        <a class="logo-header" href="./index.html">Web<span class="logo-header-span">Studio</span></a>
         <ul class="menu">
-            <li class="menu-item"><a class="menu-link" href="/index.html">Studio</a></li>
-            <li class="menu-item"><a class="menu-link" href="/index.html">Portfolio</a></li>
-            <li class="menu-item"><a class="menu-link" href="/index.html">Contacts</a></li>
+            <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
+            <li class="menu-item"><a class="menu-link" href="#">Portfolio</a></li>
+            <li class="menu-item"><a class="menu-link" href="#">Contacts</a></li>
         </ul>
     </nav>
     <address class="address">
@@ -51,92 +51,92 @@
     <!-- #endregion hero image -->
 
     <!-- #Section 3-->
-    <section>
-        <h2>Features</h2>
+    <section class="features">
+        <h2 class="features-title">Features</h2>
         <ul>
             <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
+                <h3 class="features-item">Strategy</h3>
+                <p class="features-text">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                <h3 class="features-item">Punctuality</h3>
+                <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <h3 class="features-item">Diligence</h3>
+                <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                     risk.</p>
             </li>
             <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                <h3 class="features-item">Technologies</h3>
+                <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
             </li>
         </ul>
     </section>
     <!--#endSection 3-->
     <!--#Section 4-->
-    <section>
-        <h2>Our Team</h2>
+    <section class="team">
+        <h2 class="team-title">Our Team</h2>
         <ul>
             <li>
                 <img src="./images//section4/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="team-item">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
             </li>
             <li>
                 <img src="./images/section4/tom_ford.jpg" alt="tom_ford" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-item">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images//section4/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="team-item">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
             </li>
             <li>
                 <img src="./images//section4/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="team-item">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
             </li>
         </ul>
     </section>
     <!--#endSection 4-->
     <!--#Section 5-->
-    <section>
-        <h2>Our Portfolio</h2>
+    <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/section5/banking_app.jpg" alt="banking_app" width="360" height="300"> 
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-item">Banking App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
                     <img src="./images/section5/cashless_payment.jpg" alt="cashless_payment" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-item">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/section5/meditation_app.jpg" alt="meditation_app" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-item">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
                     <img src="./images/section5/taxi_service.jpg" alt="taxi_service" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-item">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/section5/screen_illustrations.jpg" alt="screen_illustrations" width="360" height="300"> 
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-item">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
                 <li>
                     <img src="./images/section5/online_courses.jpg" alt="online_courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-item">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
 
