--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a class="logo-header" href="./index.html">Web<span class="logo-header-span">Studio</span></a>
         <ul class="menu">
             <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">Portfolio</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">Contacts</a></li>
+            <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
+            <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
         </ul>
     </nav>
     <address class="address">
@@ -80,7 +80,7 @@
     <!--#Section 4-->
     <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul>
+        <ul class="team-list">
             <li>
                 <img src="./images//section4/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
                 <h3 class="team-item">Mark Guerrero</h3>
