--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
     <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-            <li>
+            <li class="team-list-menu">
                 <img src="./images//section4/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
                 <h3 class="team-item">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-list-menu">
                 <img src="./images/section4/tom_ford.jpg" alt="tom_ford" width="264" height="260">
                 <h3 class="team-item">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-list-menu">
                 <img src="./images//section4/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
                 <h3 class="team-item">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-list-menu">
                 <img src="./images//section4/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
                 <h3 class="team-item">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
